# selenium_browser_url_parcer

./: .env_example  Dockerfile  Readme.md  docker-compose.yaml  pyproject.toml
data/: requests.csv
src/: __main__.py  parcer.py
src/common/browser_controllers/: __init__.py  base.py  firefox.py
src/common/drivers/: __init__.py  base.py  firefox.py
src/common/page_objects/: __init__.py  google_search.py
src/core/: __init__.py  settings.py
src/handlers/: __init__.py  google_search.py
src/parsers/: __init__.py  google_search.py
src/services/: __init__.py  google_search.py
src/utils/csv_utils/: __init__.py  requests.py  urls.py
